# spdepy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
examples/: test.ipynb
examples/advection_diffusion_example/: advection_diffusion.py  master.ipynb  master.py  results.py  run_results.sh  run_training.sh  seperable_spatial_temporal.py  var_advection_var_diffusion.py  var_whittle_matern.py  whittle_matern.py
examples/advection_example/: advection_diffusion.py  master.ipynb  run_training.sh  seperable_spatial_temporal.py  var_advection_diffusion.py  var_whittle_matern.py
examples/diffusion_example/: advection_diffusion.py  advection_var_diffusion.py  master.ipynb  run_training.sh  var_whittle_matern.py  whittle_matern.py
examples/fits/: advection_diffusion_ani_bc1.npy  advection_diffusion_ani_bc3.npy  advection_diffusion_bc1.npy  advection_diffusion_bc3.npy  advection_diffusion_ha_bc1.npy  advection_diffusion_ha_bc3.npy  advection_var_diffusion_ani_bc1.npy  advection_var_diffusion_ani_bc3.npy  advection_var_diffusion_bc1.npy  advection_var_diffusion_bc3.npy  advection_var_diffusion_ha_bc1.npy  advection_var_diffusion_ha_bc3.npy  cov_advection_diffusion_ani_bc1.npy  cov_advection_diffusion_ani_bc3.npy  cov_advection_diffusion_bc1.npy  cov_advection_diffusion_bc3.npy  cov_advection_diffusion_ha_bc1.npy  cov_advection_diffusion_ha_bc3.npy  cov_advection_var_diffusion_ani_bc1.npy  cov_advection_var_diffusion_ani_bc3.npy  cov_advection_var_diffusion_bc1.npy  (+33 more)
tests/: test_spdepy.py
(+383 files in other folders)
