[tool.poetry]
name = "spdepy"
version = "0.1.0"
description = "A package to model GRF through SPDE"
authors = ["Martin Outzen Berild"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
