[tool.poetry]
name = "spdepy"
version = "0.1.0"
description = "A package to model GRF through SPDE"
authors = ["Martin Outzen Berild"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.26.0"
scipy = "^1.11.3"
scikit-sparse = "^0.4.12"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
